# applista

./: CMakeLists.txt  main.c  ordenar_vetores.c  primeiro  segundo
